# carbon-cpp-learning-lab

./: .carbon-sha256  .carbon-version  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
docs/: 00-status.md  01-setup.md  02-carbon-hands-on.md  03-carbon-design.md  04-modern-cpp23.md  05-interop.md  06-product-design.md  07-study-plan.md  08-resources.md  09-toolchain-design.md  10-verification.md  11-readiness-review.md  12-report-schema.md
issues/: 001-carbon-baseline.md  002-reproducible-setup.md  003-nightly-smoke.md  004-basic-syntax-katas.md  005-class-value-semantics.md  006-checked-generics.md  007-choice-errors.md  008-package-graph.md  009-cpp23-baseline.md  010-parser-hardening.md  011-bounded-aggregation.md  012-report-schema.md  013-cli-contract.md  014-test-suite.md  015-sanitizer-fuzz.md  016-benchmark-soak.md  017-resource-limits.md  018-ci-gates.md  019-interop-contract.md  020-c-abi-experiment.md  021-carbon-histogram.md  022-differential-tests.md  023-nightly-refresh.md  024-packaging-release.md  (+4 more)
product/loglens/: CMakeLists.txt  Makefile  README.md
product/loglens/bench/: generate.cpp  resource_report.sh
product/loglens/carbon_experiments/: histogram.carbon
product/loglens/include/loglens/: aggregator.hpp  c_api.h  input.hpp  model.hpp  parser.hpp  result.hpp
product/loglens/src/: aggregator.cpp  c_api.cpp  input.cpp  main.cpp  parser.cpp
product/loglens/tests/: fuzz_parser.cpp  integration.sh  test_main.cpp
product/loglens/tests/golden/: many-services.json  one-service.json  zero.json
(+22 files in other folders)
